Hosting completed. Minor issues are unidentified / corrected.